fix broken stubbing